...
                    if (quick)
                      Padding(
                        padding: const EdgeInsets.only(bottom: 16),
                        child: Text(s.quickHelp),
                      ),
                    TextFormField(
                      key: const Key('transactionAmount'),
                      controller: amount,
                      autofocus: true,
                      decoration: InputDecoration(
                        labelText: s.amount,
                        suffixText: widget.controller.profile!.currency,
                      ),
...
